# f1tenth2023ROS

./: .gitignore
brake_governer/: CMakeLists.txt  package.xml
brake_governer/src/: brake_governer.py
datmo/: CMakeLists.txt  package.xml
datmo/launch/: datmo.launch
datmo/src/: cluster.hpp  datmo.cpp  datmo.hpp  path_logger.h  trajectory.cpp  trajectory.h
f1tenth_system/: Emergency_Braking_lab_v2.py
f1tenth_system/serial/: CMakeLists.txt
health_monitor/include/: imu_health_checker.h
highspeed_ctrl/: CMakeLists.txt  package.xml
highspeed_ctrl/cfg/: test.cfg
highspeed_ctrl/include/: main_ctrl.h  pure_pursuit.h  state.h  trajectory.h  trajectory_manager.h  utils.h  vehicle_dynamics.h
highspeed_ctrl/include/FORCESNLPsolver/include/: FORCESNLPsolver.h  FORCESNLPsolver_memory.h
highspeed_ctrl/include/FORCESNLPsolver/interface/: FORCESNLPsolver_lib.mdl  FORCESNLPsolvercompact_lib.mdl  definitions_eval.py
highspeed_ctrl/launch/: brake_governer.launch  highspeed_ctrl.launch
highspeed_ctrl/path/: lookuptb.txt  path.txt
highspeed_ctrl/solverbuild/: abstract_model.py  controllerTypes.py  dynamics_models.py  h2h_configs.py  model_types.py  nmpc_fren_build.py  radius_arclength_track.py  track.py
highspeed_ctrl/src/: main_ctrl.cpp  pure_pursuit.cpp  trajectory.cpp  trajectory_manager.cpp  utils.cpp
hmcl_msgs/: CMakeLists.txt
hmcl_msgs/msg/: VehicleState.msg
mpcc_ctrl/: CMakeLists.txt  package.xml
mpcc_ctrl/cfg/: test.cfg
mpcc_ctrl/include/: main_ctrl.h  obstacles.h  predictor.h  state_and_types.h  track.h  utils.h  vehicleState.h
mpcc_ctrl/launch/: mpcc_ctrl.launch
mpcc_ctrl/models/: data.json
mpcc_ctrl/solverbuildscripts/: MPCC_H2H_approx.py  MPCC_H2H_approx_build.py  abstract_controller.py  build_main.py  h2h_configs_build.py
mpcc_ctrl/src/: main_ctrl.cpp  obstacles.cpp  predictor.cpp  track.cpp  utils.cpp  vehicleState.cpp
ov_ctrl/: CMakeLists.txt  package.xml  setup.py
ov_ctrl/cfg/: dynparams.cfg
ov_ctrl/launch/: tar_ov_ctrl.launch
ov_ctrl/src/: cali_ros.py  tar_main_node.py
ovt_ws/: CMakeLists.txt  package.xml  setup.py
ovt_ws/cfg/: dynparams.cfg
ovt_ws/launch/: build.launch  main.launch  record.launch
ovt_ws/scripts/: MPCC_H2H_approx.py  cali_ros  dynamics_simulator.py  h2h_configs.py  main.py  obstacle_types.py  path_generator copy 2.py  path_generator copy.py  path_generator.py  radius_arclength_track.py  record_main.py  solver_build.py  target_main.py
path_generator/: CMakeLists.txt  package.xml
path_generator/launch/: path_generator.launch
path_generator/scripts/: path_generator.py
path_generator/src/: path_generator.py
path_generator2/: CMakeLists.txt  package.xml  setup.py
path_generator2/include/: track_lib.py
path_generator2/launch/: path_generator.launch
path_generator2/src/: path_generator.py
predictor/: CMakeLists.txt  package.xml  setup.py
predictor/cfg/: predictorDyn.cfg
pub_track_gui/: CMakeLists.txt  package.xml
state_estimator/: CMakeLists.txt  package.xml
target_estimator/: CMakeLists.txt  package.xml
(+402 files in other folders)
